--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
             <time>2023-Present</time>
             <p>An AI-driven platform enhancing Business Analysis and QA processes using automation, digital twins, and workflow optimization.</p>
             <figure>
-                <img src="images/cycle.png" alt="Cycle.ai Screenshot">
+                <img src="images/cc.png" alt="Cycle.ai Screenshot">
                 <figcaption>Cycle.ai – Redefining SDLC workflows</figcaption>
             </figure>
             <a href="#">Learn More</a>
