--- a/Blog.html
+++ b/Blog.html
@@ -56,7 +56,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Your Name</p>
+        <p>&copy; 2025 Faris</p>
     </footer>
 </body>
 </html>
