--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 My Website</p>
+        <p>&copy; 2025 Faris</p>
     </footer>
 </body>
 </html>
