--- a/cv.html
+++ b/cv.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
+        <h1>Faris</h1>
         <h2>Senior Product Manager | Startup Enthusiast | AI and Tech Innovator</h2>
         <nav>
             <ul>
@@ -67,7 +67,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Your Name</p>
+        <p>&copy; 2025 Faris</p>
     </footer>
 </body>
 </html>
