--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 My Website</p>
+        <p>&copy; 2025 Faris</p>
     </footer>
 </body>
 </html>
