--- a/projects.html
+++ b/projects.html
@@ -64,7 +64,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Your Name</p>
+        <p>&copy; 2025 Faris</p>
     </footer>
 </body>
 </html>
