--- a/cv.html
+++ b/cv.html
@@ -16,7 +16,7 @@
                 <li><a href="cv.html">CV</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="Blog.html">Blog</a></li>
             </ul>
         </nav>
     </header>
