--- a/projects.html
+++ b/projects.html
@@ -61,6 +61,7 @@
             <time>2024</time>
             <p>A startup idea providing flexible office rentals for businesses, freelancers, and remote teams.</p>
         </article>
+        <button id="animateProjects">Animate Projects</button>
     </main>
 
     <footer>
