--- a/Blog.html
+++ b/Blog.html
@@ -30,29 +30,30 @@
             <h2>The Future of AI in Product Management </h2>
             <time>2025-01-01</time>
             <p>Exploring how AI is transforming product management workflows, improving decision-making, and automating repetitive tasks.</p>
-            <a href="#" onclick="showMessage()">Read More</a>
+            <a href="#" class="read-more" onclick="showMessage()">Read More</a>
         </article>
 
         <article>
             <h2>Lessons Learned from Building Cycle.ai</h2>
             <time>2024-12-15</time>
             <p>Insights on the challenges and key takeaways from developing an AI-powered solution for BAs and QAs.</p>
-            <a href="#" onclick="showMessage()">Read More</a>
+            <a href="#" class="read-more" onclick="showMessage()">Read More</a>
         </article>
 
         <article>
             <h2>How to Run a Successful Product Hackathon</h2>
             <time>2024-11-20</time>
             <p>A guide on structuring a product competition, from ideation to execution.</p>
-            <a href="#" onclick="showMessage()">Read More</a>
+            <a href="#" class="read-more" onclick="showMessage()">Read More</a>
         </article>
 
         <article>
             <h2>Startup Strategies for Growth in the MENA Region</h2>
             <time>2024-10-10</time>
             <p>Key tactics for scaling a startup successfully in the Middle East and North Africa market.</p>
-            <a href="#" onclick="showMessage()">Read More</a>
+            <a href="#" class="read-more" onclick="showMessage()">Read More</a>
         </article>
+
     </main>
 
     <footer>
