--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - My Website</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <header>
@@ -21,6 +22,7 @@
     </header>
 
     <main>
+
         <h2>About Me</h2>
         <p>This is a brief introduction to my website.</p>
         <h3>My Interests</h3>
@@ -29,6 +31,7 @@
             <li>Design</li>
             <li>Music</li>
         </ul>
+        <button id="changeBg">Change Background</button>
     </main>
 
     <footer>
