--- a/cv.html
+++ b/cv.html
@@ -47,8 +47,8 @@
             <h2>Education</h2>
             <p>Bachelor's in Computer Science</p>
         </section>
-
-        <section>
+        <button id="toggleSkills">Toggle Skills</button>
+        <section id="skillsSection">
             <h2>Skills</h2>
             <ul>
                 <li>Product Management </li>
@@ -58,7 +58,10 @@
                 <li>Digital Twin Methodology</li> 
                 <li>Strategy </li> 
                 <li>Problem solving</li> 
-            </ul>
+            </ul>        </section>
+        
+        <section>
+           
         </section>
 
         <blockquote>
@@ -69,6 +72,8 @@
     <footer>
         <p>&copy; 2025 Faris</p>
     </footer>
+    <script src="script.js"></script>
+
 </body>
 </html>
 
