--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - My Website</title>
     <link rel="stylesheet" href="style.css">
-    <script src="Script.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
     <header>
@@ -31,6 +31,7 @@
             <li>Design</li>
             <li>Music</li>
         </ul>
+        <div id="greeting"></div>
         <button id="changeBg">Change Background</button>
     </main>
 
