--- a/projects.html
+++ b/projects.html
@@ -62,10 +62,14 @@
             <p>A startup idea providing flexible office rentals for businesses, freelancers, and remote teams.</p>
         </article>
         <button id="animateProjects">Animate Projects</button>
+        <button id="showMoreProjects">Show More Projects</button>
+
     </main>
 
     <footer>
         <p>&copy; 2025 Faris</p>
     </footer>
+    <script src="script.js"></script>
+
 </body>
 </html>
