--- a/Blog.html
+++ b/Blog.html
@@ -59,6 +59,6 @@
     <footer>
         <p>&copy; 2025 Faris</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="Script.js"></script>
 </body>
 </html>
