--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
     <footer>
         <p>&copy; 2025 Faris</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="Script.js"></script>
 
 </body>
 </html>
