--- a/cv.html
+++ b/cv.html
@@ -72,7 +72,7 @@
     <footer>
         <p>&copy; 2025 Faris</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="Script.js"></script>
 
 </body>
 </html>
