--- a/projects.html
+++ b/projects.html
@@ -69,7 +69,7 @@
     <footer>
         <p>&copy; 2025 Faris</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="Script.js"></script>
 
 </body>
 </html>
